perf(types): мемоизация TypeRegistry.getMembers через epoch-счётчик
getMembers пересобирал список членов (а для config/generic-типов —
переспециализировал) на КАЖДЫЙ вызов; на горячем пути (семантические токены,
completion) это повторялось тысячи раз для одного типа.

Добавлена мемоизация Map<(ref,fileType), (epoch,members)>. Инвалидация —
через AtomicLong-epoch: бампается при любой мутации memberSources
(register/unregister) И на DocumentContextContentChangedEvent — часть
member-source'ов лениво читает символьное дерево/OScript-библиотеку и меняет
вывод без ре-регистрации (см. упавший OScriptLibraryIndexTest, теперь зелёный).
В steady-state (во время запроса, без правок) memo стабилен. Кэшируется
неизменяемый список (все потребители только итерируют).

Замер (УправлениеДоступомСлужебный, SSL) поверх кэша инференса: property
22375→13740ms, method 40524→24880ms; от базы — property 195985→13740 (~14×),
method 184385→24880 (~7.4×). Поведение не изменилось, регрессия зелёная.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>